# mogy

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  install.sh  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  claude.yml  pages.yml  release.yml
docs/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  current.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  files.rs  metadata.rs  mod.rs  query.rs
src-tauri/src/config/: connections.rs  mod.rs  session.rs  settings.rs
src-tauri/src/db/: client.rs
src/components/: CommandPalette.tsx  ConnectionModal.tsx  Editor.tsx  KeymapModal.tsx  ListModal.tsx  ResultJson.tsx  ResultTable.tsx  ResultsPanel.tsx  StatusBar.tsx  VimJsonEditor.tsx
src/hooks/: useMongoConnection.ts  usePanelFocus.ts  useQueryExecution.ts  useUpdater.ts
src/lib/: keybindings.ts  tauri-commands.ts  themes.ts  vim-commands.ts
src/styles/: globals.css
