[package]
name = "mogy"
version = "0.1.0"
description = "MongoDB Query Tool with Vim Motions"
authors = ["tcm"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mogy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
mongodb = "3"
tokio = { version = "1", features = ["full"] }
dirs = "6"
