[package]
name = "mogy"
version = "2026.23.3"
description = "MongoDB Query Tool with Vim Motions"
authors = ["tcm"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mogy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
mongodb = "3"
tokio = { version = "1", features = ["full"] }
dirs = "6"
json5 = "1.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
